syntax = "proto3";

package com.github.sisyphsu.nakedata.proto;
option java_multiple_files = true;

message UserDetail {
    int64 id = 1;
    int32 age = 2;
    string nickname = 3;
    string avatarUrl = 4;
    int64 createTime = 10;
    int64 updateTime = 11;
}

message SingleMsg {
    string msg = 1;
}

message MultiMsg {
    string msg1 = 1;
    string msg2 = 2;
    string msg3 = 3;
    string msg4 = 4;
    string msg5 = 5;
}